--- a/05 - reactive-forms/app/stock-inventory/components/stock-counter/stock-counter.component.scss
+++ b/05 - reactive-forms/app/stock-inventory/components/stock-counter/stock-counter.component.scss
@@ -27,7 +27,7 @@
     border-radius: 0;
     line-height: 1;
     padding: 3px 7px;
-    background: #9E61C8;
+    background: rgb(63, 89, 160);
     color: #fff;
     font-weight: 500;
     &:disabled {
