--- a/05 - reactive-forms/css/app.css
+++ b/05 - reactive-forms/css/app.css
@@ -27,7 +27,7 @@ ol {
   padding: 0;
 }
 a {
-  color: #9f72e6;
+  color: rgb(63, 89, 160);
   text-decoration: none;
 }
 input,
@@ -49,7 +49,7 @@ label {
   display: block;
 }
 button {
-  background: #9B5FC6;
+  background: rgb(63, 89, 160);
   cursor: pointer;
   border: 0;
   border-radius: 3px;
@@ -59,7 +59,7 @@ button {
 }
 button:disabled {
   cursor: not-allowed;
-  background: #b598e4;
+  background: #7289c9;
 }
 p {
   margin: 5px 0;
